# comment-linter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  release-please-config.json
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/comment-lint/: Cargo.toml
crates/comment-lint-core/: Cargo.toml
crates/comment-lint-core/src/: config.rs  lib.rs  pipeline.rs  types.rs
crates/comment-lint-core/src/diff/: filter.rs  mod.rs  parser.rs
crates/comment-lint-core/src/extraction/: comment.rs  mod.rs
crates/comment-lint-core/src/features/: cross_reference.rs  lexical.rs  mod.rs  semantic.rs  structural.rs
crates/comment-lint-core/src/languages/: go.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
crates/comment-lint-core/src/output/: features_jsonl.rs  github.rs  json.rs  mod.rs  text.rs
crates/comment-lint-core/src/scoring/: heuristic.rs  mod.rs
crates/comment-lint-core/tests/: config_test.rs  diff_types_test.rs  integration_test.rs
crates/comment-lint-core/tests/fixtures/go/: superfluous.go  valuable.go
crates/comment-lint-core/tests/fixtures/javascript/: superfluous.js  valuable.js
crates/comment-lint-core/tests/fixtures/python/: superfluous.py  valuable.py
crates/comment-lint-core/tests/fixtures/rust/: superfluous.rs  valuable.rs
crates/comment-lint-core/tests/fixtures/typescript/: superfluous.ts  valuable.ts
crates/comment-lint-ml/: Cargo.toml
crates/comment-lint-ml/src/: ensemble.rs  lib.rs  scorer.rs  tensor.rs
crates/comment-lint-ml/tests/: ensemble_test.rs
crates/comment-lint-ml/tests/fixtures/: dummy_model.onnx
crates/comment-lint/src/: main.rs
crates/comment-lint/tests/: diff_mode.rs  export_features_test.rs  input_mode_test.rs  ml_cli_test.rs  scaffold_test.rs
crates/comment-lint/tests/fixtures/diffs/: multi_file.diff  no_comments.diff  simple_add.diff
training/: README.md  create_dummy_model.py  evaluate_model.py  export_onnx.py  generate_synthetic.py  label_review.py  pyproject.toml  split_dataset.py  train.py
training/src/clt/: build_high_quality_dataset.py  create_dummy_model.py  evaluate_model.py  export_onnx.py  generate_data.py  split_dataset.py  train.py  utils.py
training/tests/: conftest.py  test_build_high_quality_dataset.py  test_export_onnx.py  test_generate_data.py  test_label_review.py  test_split_dataset.py  test_train.py  test_utils.py
