[workspace]
members = ["crates/comment-lint", "crates/comment-lint-core"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
colored = "2"
walkdir = "2"
rayon = "1"
unicode-segmentation = "1"
toml = "0.8"
regex = "1"
ignore = "0.4"
crossbeam-channel = "0.5"
insta = { version = "1", features = ["yaml"] }
