[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comment-lint-training"
version = "0.1.0"
description = "Training pipeline for comment-lint ML classifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "skl2onnx>=1.20.0",
    "xgboost>=3.2.0",
]

[project.scripts]
clt-generate-data      = "clt.generate_data:main"
clt-generate-synthetic = "clt.generate_synthetic:main"
clt-build-dataset      = "clt.build_high_quality_dataset:main"
clt-label-review       = "clt.label_review:main"
clt-split-dataset      = "clt.split_dataset:main"
clt-train              = "clt.train:main"
clt-export-onnx        = "clt.export_onnx:main"
clt-evaluate           = "clt.evaluate_model:main"
clt-create-dummy-model = "clt.create_dummy_model:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
