[package]
name = "comment-lint"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "comment-lint"
path = "src/main.rs"

[features]
ml = ["dep:comment-lint-ml"]

[dependencies]
comment-lint-core = { path = "../comment-lint-core" }
comment-lint-ml = { path = "../comment-lint-ml", optional = true }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
